--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
-title: "react-spring-enums"
-description: "Sharing enums with a Java Spring Boot back-end"
+title: 'react-spring-enums'
+description: 'Sharing enums with a Java Spring Boot back-end'
+links:
+  - icon: 'https://unpkg.com/simple-icons@latest/icons/github.svg'
+    name: 'View on Github'
+    href: 'https://github.com/42BV/fortytwo'
