--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ links:
   - icon: 'https://unpkg.com/simple-icons@latest/icons/github.svg'
     name: 'View on Github'
     href: 'https://github.com/42BV/fortytwo'
+  - icon: 'https://unpkg.com/simple-icons@latest/icons/storybook.svg'
+    name: 'Storybook'
+    href: 'https://42bv.github.io/storybook'
+    color: '#FF4785'
